--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: CS371p Fall 2015: Kaivan Shah
 description: CS student at UT Austin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/kaivan29/kaivan29.github.io/blob/master/images/me.jpg
 
 #
 # Flags below are optional
