--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: kaivan29@utexas.edu
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: kaivan29
   instagram:
   linkedin:
   pinterest:
