--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS371p Fall 2015 Kaivan Shah
+name: "CS371p Fall 2015: Kaivan Shah"
 
 # Short bio or description (displayed in the header)
 description: CS student at UT Austin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/kaivan29/kaivan29.github.io/blob/master/images/me.jpg
+avatar: http://github.com/kaivan29/kaivan29.github.io/blob/master/images/me.jpg
 
 #
 # Flags below are optional
