--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: "CS371p Fall 2015: Kaivan Shah"
+name: "CS373 Spring 2017: Kaivan Shah"
 
 # Short bio or description (displayed in the header)
 description: CS student at UT Austin
